# war-of-pirates-launcher

./: LICENCE  README.md  index.html  package-lock.json  package.json
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  version
src-tauri/icons/: icon.icns
src-tauri/src/: download.rs  file.rs  main.rs
src/components/: download-location.vue  download-options.vue  download.vue  home.vue  language-switcher.vue  update.vue
src/utils/: i18n.js  router.js
