[package]
name = "war-of-pirates-launcher"
version = "0.1.0"
description = "A game launcher&updater for War of Pirates "
authors = ["Musa Kavak musa0kavak@gmail.com"]
edition = "2021"
repository = "https://github.com/MusaKavak/war-of-pirates-launcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "window-all",
    "http-all",
    "dialog-open",
    "fs-all",
    "path-all",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# downloader = "0.2.7"
reqwest = { version = "0.11", features = ["blocking", "stream"] }
futures = "0.3"
zip = "0.6.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
